--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,2 +1,6 @@
 FROM node:16-alpine
 WORKDIR /app
+
+RUN npm install --save-dev react-scroll
+RUN npm install -g firebase
+RUN npm install -g firebase-tools
