--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,3 +4,4 @@ WORKDIR /app
 RUN npm install --save-dev react-scroll
 RUN npm install -g firebase
 RUN npm install -g firebase-tools
+# RUN npm install react-draggable --save
