--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,10 +2,11 @@ FROM node:16-alpine
 WORKDIR /app
 
 RUN npm install --save-dev react-scroll
-RUN npm install -g firebase
-RUN npm install -g firebase-tools
+# RUN npm install @material-ui/core
+# RUN npm install -g firebase
+# RUN npm install -g firebase-tools
+# RUN npm install react-draggable --save
 
+# WORKDIR /app
 
-WORKDIR /app
-
-RUN npm install @material-ui/core
+# RUN npm install 
