横幅に合わせてサイドバーの表示非表示を切り替え

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     tty: true
     volumes:
       - ./backend:/backend
+    restart: always
     environment:
       - TZ=${TZ}
     command: sh -c "node index.js"
