--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     tty: true
     volumes:
       - ./app:/app:cached
+    restart: always
     environment:
       - TZ=${TZ}
     command: sh -c "cd my-work-space && yarn start"
@@ -53,6 +54,7 @@ services:
       - ./db/initdb.d:/docker-entrypoint-initdb.d
       - mysql_mws_data:/var/lib/mysql
     command: --default-authentication-plugin=mysql_native_password
+    restart: always
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_ROOT_HOST=${DB_ROOT_HOST}
